# primer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  app.py  netlify.toml  primer-report.json  release.toml
.github/workflows/: ci.yml  release.yml
docs/: index.html
src/: allowlist.rs  cache.rs  cli.rs  config.rs  lockfile.rs  main.rs  manifest.rs  prompt.rs  report.rs  shim.rs  summary.rs
src/cli/: doctor.rs  hook.rs  init.rs  mcp.rs  mod.rs  model.rs  sbom.rs  uninit.rs  watch.rs
src/engine/: advisory.rs  mod.rs  osv.rs
src/shim/: mod.rs
src/summary/: download.rs  infer.rs
tests/: test_integration.py  test_parser.py  test_summarizer.py
