[package]
name = "motionstream"
version = "0.1.0"
edition = "2024"
description = "Pre-install security interceptor for package managers"

[[bin]]
name = "motionstream"
path = "src/main.rs"

[features]
default = []
ai    = ["dep:candle-core", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub"]
metal = ["ai", "candle-core/metal"]
cuda  = ["ai", "candle-core/cuda"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
inquire = "0.7"
colored = "2"
toml = "0.8"

# AI summary layer — only compiled with --features ai
candle-core         = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
tokenizers          = { version = "0.21", optional = true, default-features = false, features = ["onig"] }
hf-hub              = { version = "0.3", optional = true, features = ["tokio"] }

[dev-dependencies]
mockito = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
