[package]
name = "primer"
version = "0.1.4"
edition = "2024"
description = "Pre-install security interceptor for package managers"
repository = "https://github.com/callezenwaka/primer"
homepage = "https://primer-scan.netlify.app"
authors = ["Callis Ezenwaka <callisezenwaka@outlook.com>"]
license = "MIT"
readme = "README.md"
keywords = ["security", "vulnerability", "package-manager", "cve", "osv"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "primer"
path = "src/main.rs"

[features]
default = []
ai    = ["dep:candle-core", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub"]
metal = ["ai", "candle-core/metal"]
cuda  = ["ai", "candle-core/cuda"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
inquire = "0.9"
colored = "3"
toml = "1"
notify = { version = "6", features = ["macos_fsevent"] }

# AI summary layer — only compiled with --features ai
candle-core         = { version = "0.10", optional = true }
candle-transformers = { version = "0.10", optional = true }
tokenizers          = { version = "0.23", optional = true, default-features = false, features = ["onig"] }
hf-hub              = { version = "0.5", optional = true, features = ["tokio"] }

[dev-dependencies]
mockito = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }

# ---------------------------------------------------------------------------
# cargo-dist — release distribution
# ---------------------------------------------------------------------------

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.32.0"
ci = ["github"]
installers = ["shell", "powershell"]
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
# Ship the AI feature in release binaries so --ai works out of the box.
# Users who skip `primer update-models` simply never use the flag.
features = ["ai"]
pr-run-mode = "plan"
